# predict-energy-production

./: .gitignore  README.md  main.py  pyproject.toml
models/: data_preparation.py  model.py  xgbregressor.md
models/model_saleh/: lin_reg.py
notebooks/: explo-data.ipynb  saleh.ipynb
pipeline/: pipeline.py
prepare_data/: api_handlers.py  cleaning_utils.py  csv_handlers.py  data_handler.py  db_handler.py  merge_handler.py
productors/: productors.py
routes/: apisaleh.py  predict.py
tests/: test_producteur.py
